// Antigravity State Sync Proto Definitions
// Auto-generated by rs_parser

syntax = "proto3";

package state_sync;

// OAuth Token 结构 (三层嵌套)
// 数据库存储: Base64(OAuthTokenWrapper)
message OAuthTokenWrapper {
  OAuthTokenInner inner = 1;
}

message OAuthTokenInner {
  string sentinel_key = 1;  // "oauthTokenInfoSentinelKey"
  OAuthTokenData data = 2;
}

message OAuthTokenData {
  string oauth_info_base64 = 1;  // Base64(OAuthInfo)
}

// OAuthInfo (需要单独 Base64 解码)
message OAuthInfo {
  string access_token = 1;
  string token_type = 2;     // "Bearer"
  string refresh_token = 3;
  Timestamp expiry = 4;
}

message Timestamp {
  int64 seconds = 1;
}

// Override Store 结构
message OverrideStoreWrapper {
  OverrideStoreInner inner = 1;
}

message OverrideStoreInner {
  string sentinel_key = 1;  // "secureModeEnabledSentinelKey"
  OverrideStoreData data = 2;
}

message OverrideStoreData {
  string value = 1;  // "CAA=" = false, "CAE=" = true
}

// User Status 结构
message UserStatusWrapper {
  UserStatusInner inner = 1;
}

message UserStatusInner {
  string sentinel_key = 1;  // "userStatusSentinelKey"
  UserStatusData data = 2;
}

message UserStatusData {
  string raw_data = 1;  // Base64 encoded data
}

// User Status 原始内容（raw_data）对应结构
message UserContext {
  int32 status = 2;
  string plan_name = 3;
  string email = 7;
  AppConfig models = 33;
  Subscription plan = 36;
}

message AppConfig {
  repeated ModelConfig items = 1;
  RecommendedModels recommended = 2;
  DefaultModel default_model = 3;
}

message ModelConfig {
  string name = 1;
  ModelId id = 2;
  int32 field_5 = 5;
  int32 field_11 = 11;
  ModelMeta meta = 15;
  string tag = 16;
  repeated MimeTypeSupport supported_types = 18;
}

message ModelId {
  int32 id = 1;
}

message ModelMeta {
  float rate_limit = 1;
  MetaTimestamp timestamp = 2;
}

message MetaTimestamp {
  int64 value = 1;
}

message MimeTypeSupport {
  string mime_type = 1;
  int32 enabled = 2;
}

message RecommendedModels {
  string category = 1;
  RecommendedList list = 2;
}

message RecommendedList {
  repeated string model_names = 2;
}

message DefaultModel {
  ModelId model = 1;
}

message Subscription {
  string tier_id = 1;
  string tier_name = 2;
  string display_name = 3;
  string upgrade_url = 7;
  string upgrade_message = 8;
}
